packages/jsii/test/negatives/neg.static-method-name.ts
export class MyClass {
  METHOD() {
    return 'hi';
  }
}
